# rootbound

./: pyproject.toml
src/rootbound/cli/: main.py
src/rootbound/core/: constants.py  engine.py  explainer.py  models.py  pypi_mapping.py  stdlib_list.py
tests/: conftest.py  test_cli.py  test_engine.py  test_explain.py
